changes hobbies & HobbiesTest