@@ -4,6 +4,8 @@ import lombok.RequiredArgsConstructor;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -32,15 +34,15 @@ public class HobbiesTest {
     @Test
     void testCreateDictionary() {
         Map<String, List<String>> actualResult = hobbies.createDictionary(testFilePath);
-        Map<String, List<String>> expectedResult = Map.of("Ava", List.of("Drawing"));
-        assertEquals(actualResult.get("Ava"), expectedResult.get("Ava"));
-
+        Map<String, List<String>> expectedResult = new HashMap<>();
+        expectedResult.put("Sophia", Arrays.asList("Traveling"));
+        assertEquals(expectedResult, actualResult);
     }
 
     @Test
     void testFindPersonWithMostHobbies() {
         List<String> actual = hobbies.findPersonWithMostHobbies(testFilePath);
-        List<String> expected = List.of("Olivia");
+        List<String> expected = List.of("Sophia");
         assertEquals(expected, actual);
 
     }
@@ -56,14 +58,14 @@ public class HobbiesTest {
     @Test
     void testFindMostPopularHobby() {
         List<String> actual = hobbies.findMostPopularHobby(testFilePath);
-        List<String> expected = List.of("Cycling", "Skiing", "Traveling");
+        List<String> expected = List.of("Traveling");
         assertEquals(expected, actual);
     }
 
     @Test
     void testFindLeastPopularHobby() {
         List<String> actual = hobbies.findLeastPopularHobby(testFilePath);
-        List<String> expected = List.of("Drawing", "Playing Guitar", "Cooking", "Hiking");
+        List<String> expected = List.of("Traveling");
         assertEquals(expected, actual);
 
     }
